fixed test problems
Co-Authored-By: Claude <noreply@anthropic.com>